feat: add swagger to user router, modify README file.
