# docs/swagger.json
@@ -21,7 +21,64 @@
     "host": "127.0.0.1:8081",
     "basePath": "/v1",
     "paths": {
+        "/user/admin": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "List all users account include id, username, encrypted password, etc",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user/admin"
+                ],
+                "summary": "List all users account",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"totalCount\":1,\"userList\":[{\"id\":1,\"username\":\"admin\",\"ShortId\":\"5P9Ia4QnR\",\"password\":\"$2a$10$Fv9BWzqsiQ.JuuGdcXdvN.Fx3ml.dVR47W22GoJMWQAlm9wHQIMVe\",\"role\":\"admin\",\"createdAt\":\"2021-04-18 15:40:33\",\"updatedAt\":\"2021-04-18 15:40:33\"}]}}",
+                        "schema": {
+                            "$ref": "#/definitions/user.SwaggerListResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/user/admin/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a user account specified by user ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user/admin"
+                ],
+                "summary": "Get a user information",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "the ID of the specified user to update",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"username\":\"傅秀英\",\"password\":\"$2a$10$5pLrLpEQ1HAD2Hcm3Bnud.Shhmf5bTaf1yTWYloot0i5nvn1Td4hq\",\"role\":\"general\"}}",
+                        "schema": {
+                            "$ref": "#/definitions/user.SwaggerGetResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -61,7 +118,7 @@
                     "200": {
                         "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"userId\":5}}",
                         "schema": {
-                            "$ref": "#/definitions/user.UpdateResponse"
+                            "$ref": "#/definitions/user.SwaggerUpdateResponse"
                         }
                     }
                 }
@@ -96,7 +153,7 @@
                     "200": {
                         "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"userId\":5}}",
                         "schema": {
-                            "$ref": "#/definitions/user.DeleteResponse"
+                            "$ref": "#/definitions/user.SwaggerDeleteResponse"
                         }
                     }
                 }
@@ -135,7 +192,7 @@
                     "200": {
                         "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"userId\":6,\"username\":\"夏秀兰\"}}",
                         "schema": {
-                            "$ref": "#/definitions/user.SelfUpdResponse"
+                            "$ref": "#/definitions/user.SwaggerSelfUpdResponse"
                         }
                     }
                 }
@@ -149,9 +206,6 @@
                     }
                 ],
                 "description": "SelfDel deletes the user of token specified",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -163,7 +217,7 @@
                     "200": {
                         "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"userId\":8}}",
                         "schema": {
-                            "$ref": "#/definitions/user.SelfDelResponse"
+                            "$ref": "#/definitions/user.SwaggerSelfDelResponse"
                         }
                     }
                 }
@@ -195,9 +249,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"userId\":\"7\",\"token\":\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2NTA0MzkzNDAsImlkIjo3LCJuYmYiOjE2NTA0MzkzNDAsInJvbGUiOiJnZW5lcmFsIiwidXNlcm5hbWUiOiLpob7no4oifQ.ZqeFEugcvTS2Rgq0qR4Na49-rkye6CoXPV_R9ub-QYQ\"}}",
+                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"userId\":7,\"token\":\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2NTA0NTkzODEsImlkIjo3LCJuYmYiOjE2NTA0NTkzODEsInJvbGUiOiJnZW5lcmFsIiwidXNlcm5hbWUiOiLkuIHno4oifQ.0kA4whaE9bZjXu4bN3Sw0DgrKwYzJ7kZenaGDOcdFRQ\"}}",
                         "schema": {
-                            "$ref": "#/definitions/user.LoginResponse"
+                            "$ref": "#/definitions/user.SwaggerLoginResponse"
                         }
                     }
                 }
@@ -231,7 +285,7 @@
                     "200": {
                         "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"userId\":\"7\",\"username\":\"顾磊\"}}",
                         "schema": {
-                            "$ref": "#/definitions/user.CreateResponse"
+                            "$ref": "#/definitions/user.SwaggerCreateResponse"
                         }
                     }
                 }
@@ -239,6 +293,32 @@
         }
     },
     "definitions": {
+        "model.UserInfo": {
+            "type": "object",
+            "properties": {
+                "ShortId": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "user.CreateRequest": {
             "type": "object",
             "properties": {
@@ -266,6 +346,23 @@
             "properties": {
                 "userId": {
                     "type": "integer"
+                }
+            }
+        },
+        "user.GetResponse": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
@@ -317,6 +414,118 @@
                     "type": "integer"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.SwaggerCreateResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/user.CreateResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.SwaggerDeleteResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/user.DeleteResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.SwaggerGetResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/user.GetResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.SwaggerListResponse": {
+            "type": "object",
+            "properties": {
+                "totalCount": {
+                    "type": "integer"
+                },
+                "userList": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.UserInfo"
+                    }
+                }
+            }
+        },
+        "user.SwaggerLoginResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/user.LoginResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.SwaggerSelfDelResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/user.SelfDelResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.SwaggerSelfUpdResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/user.SelfUpdResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.SwaggerUpdateResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/user.UpdateResponse"
+                },
+                "message": {
                     "type": "string"
                 }
             }
