# handler/user/admin/get.go
@@ -9,6 +9,16 @@ import (
 	"strconv"
 )
 
+// Get gets a user account.
+//
+// @Summary Get a user information
+// @Description Get a user account specified by user ID
+// @Tags user/admin
+// @Produce  json
+// @Param id path uint64 true "the ID of the specified user to update"
+// @Success 200 {object} user.SwaggerGetResponse "{"code":0,"message":"OK","data":{"username":"傅秀英","password":"$2a$10$5pLrLpEQ1HAD2Hcm3Bnud.Shhmf5bTaf1yTWYloot0i5nvn1Td4hq","role":"general"}}"
+// @Router /user/admin/{id} [get]
+// @Security ApiKeyAuth
 func Get(c *gin.Context) {
 	zap.L().Info("user get function called.", zap.String("X-Request-Id", c.GetString("X-Request-Id")))
 	userId, _ := strconv.Atoi(c.Param("id"))
