# handler/user/admin/update.go
@@ -19,11 +19,11 @@ import (
 // @Produce  json
 // @Param id path uint64 true "the ID of the specified user to update"
 // @Param user body user.UpdateRequest true "user information include username and password"
-// @Success 200 {object} user.UpdateResponse "{"code":0,"message":"OK","data":{"userId":5}}"
+// @Success 200 {object} user.SwaggerUpdateResponse "{"code":0,"message":"OK","data":{"userId":5}}"
 // @Router /user/admin/{id} [put]
 // @Security ApiKeyAuth
 func Update(c *gin.Context) {
-	zap.L().Info("update function called", zap.String("handler", "user.Update"))
+	zap.L().Info("update function called", zap.String("X-Request-Id", c.GetString("X-Request-Id")))
 	// Get the user id from the url parameter.
 	userId, _ := strconv.Atoi(c.Param("id"))
 
