# handler/user/user.go
@@ -4,7 +4,47 @@ import (
 	"Jinshuzhai-Bookstore/model"
 )
 
+type BaseResponse struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+}
+
 // swagger struct
+
+type SwaggerCreateResponse struct {
+	BaseResponse
+	Data CreateResponse `json:"data"`
+}
+
+type SwaggerLoginResponse struct {
+	BaseResponse
+	Data LoginResponse `json:"data"`
+}
+
+type SwaggerSelfUpdResponse struct {
+	BaseResponse
+	Data SelfUpdResponse `json:"data"`
+}
+
+type SwaggerSelfDelResponse struct {
+	BaseResponse
+	Data SelfDelResponse `json:"data"`
+}
+
+type SwaggerUpdateResponse struct {
+	BaseResponse
+	Data UpdateResponse `json:"data"`
+}
+
+type SwaggerGetResponse struct {
+	BaseResponse
+	Data GetResponse `json:"data"`
+}
+
+type SwaggerDeleteResponse struct {
+	BaseResponse
+	Data DeleteResponse `json:"data"`
+}
 
 type SwaggerListResponse struct {
 	TotalCount uint64            `json:"totalCount"`
@@ -58,6 +98,15 @@ type UpdateRequest struct {
 type UpdateResponse struct {
 	UserId   uint64 `json:"userId"`
 	Username string `json:"username"`
+}
+
+type GetRequest struct{}
+
+type GetResponse struct {
+	UserId   uint64 `json:"userId"`
+	Username string `json:"username"`
+	Password string `json:"password"`
+	Role     string `json:"role"`
 }
 
 type DeleteRequest struct{}
